# myrpc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  client_config.ini  config.ini  main.cc  myrpc.cpp  myrpc.h  server_config.ini
common/: CMakeLists.txt  config.h  log.h  status.h
examples/: CMakeLists.txt  user.pb.cc  user.pb.h  user.proto
examples/callee/: CMakeLists.txt  UserService.cc
examples/caller/: CMakeLists.txt  CallUserService.cc
examples/consumer/: CMakeLists.txt  CallFriendService.cc  CallUserService.cc  main.cc
examples/provider/: CMakeLists.txt  FriendService.h  UserService.cc  UserService.h  main.cc
include/myrpc/application/: MyRpcApplication.h
include/myrpc/consumer/: MyRpcChannel.h  MyRpcController.h
include/myrpc/protocol/: ErrorCode.h
include/myrpc/provider/: MyRpcProvider.h
include/myrpc/registry/: RedisRegistry.h
proto/: rpcHeader.proto  user.proto
src/: CMakeLists.txt
src/application/: MyRpcApplication.cc
src/consumer/: MyRpcChannel.cc  MyRpcController.cc
src/include/: MyRpcApplication.cc  MyRpcApplication.h  MyRpcChannel.cc  MyRpcChannel.h  MyRpcController.cc  MyRpcController.h  MyRpcProvider.cc  MyRpcProvider.h  rpcHeader.pb.cc  rpcHeader.pb.h  rpcHeader.proto
src/provider/: MyRpcProvider.cc
src/registry/: RedisRegistry.cc
tests/: CMakeLists.txt
tests/examples/: user.pb.cc
tests/protobuf/: CMakeLists.txt  main.cc  test.proto
